--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 @import './tailwindcss.base.css';
+@import url('https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css');
 
 @font-face {
   font-family: 'IM_Hyemin-Bold';
@@ -10,16 +11,24 @@
 
 @media screen and (max-width: 768px) {
   html {
-    font-size: 14px;
+    -webkit-text-size-adjust: none;
   }
 }
 
 body {
-  margin: 0;
-  font-family: 'IM_Hyemin-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  width: 100%;
+  height: 100%;
+  font-family: 'Nanum Myeongjo';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.maru-buri {
+  font-family: 'MaruBuri';
+  font-size: 1.08rem;
+  font-weight: 700;
+  letter-spacing: 0.4em;
+  margin-bottom: 2.5rem;
 }
 
 .great-vibes {
