welcome 페이지 배경화면 상하단 이펙트 및 낙화 효과 추가

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 @import './tailwindcss.base.css';
+@import './sakura.css';
 @import url('https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css');
 
 @font-face {
